docs/tests/parser/expressions/invalid/ExprSizeofInvalidType.b
fn void test() {
    let int x = sizeof(42);
}
